--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ main:
   - title: "Quick-Start Guide"
     url: /docs/quick-start-guide/
 
-  - title: "About"
+  - title: "Abot"
     url: /about/
 
   - title: "Sample Posts"
