--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -22,7 +22,7 @@ foo:
 main:
   - title: "Quick-Start Guide"
     url: /docs/quick-start-guide/
-  - title: "About"
+  - title: "Abot"
     url: /about/
   - title: "Sample Posts"
     url: /year-archive/
