--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-locale                   : "en"
-title                    : "Site Title"
+locale                   : "de"
+title                    : "Ferienwohnung Anna Düne"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Gerwin Böttick"
+description              : "Übersicht Ferienwohnung Anna Düne 1-06"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -77,10 +77,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Gerwin Böttick"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : #"I am an amazing person."
+  location         : #"Somewhere"
   email            :
   uri              :
   bitbucket        :
