--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /kontakt/
   - title: "Impressum"
     url: /impressum/
- # - title: "Sample Collections"
- #   url: /collection-archive/
+  - title: "Datenschutzerklärung"
+    url: /datenschutz/
  # - title: "Sitemap"
  #   url: /sitemap/
