--- a/_config.yml
+++ b/_config.yml
@@ -181,6 +181,7 @@ permalink: /buchung/
 permalink: /kontakt/
 # permalink: /about/
 permalink: /impressum/
+permalink: /datenschutz/
 
 
 # Plugins
