--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "de"
-title                    : "Ferienwohnung Anna Düne 1-06"
+title                    : "Ferienwohnung Anna Düne Wangerooge"
 title_separator          : "-"
 name                     : "Gerwin Böttick"
 description              : "Übersicht Ferienwohnung Anna Düne 1-06"
