--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@ main:
     url: /buchung/
  # - title: "Abou"
  #   url: /about/
-  - title: "Kontakt"
-    url: /kontakt/
+ # - title: "Kontakt"
+ #   url: /kontakt/
  # - title: "Impressum"
  #   url: /impressum/
  # - title: "Datenschutzerklärung"
